<resources>
    <string name="app_name">HskReadingTrainer</string>
    <string name="hsk_1">HSK 1</string>
    <string name="new_words_150">New Words: 150</string>
    <string name="hsk_2">HSK 2</string>
    <string name="hsk_3">HSK 3</string>
    <string name="new_words_300">New Words: 300</string>
    <string name="hsk_4">HSK 4</string>
    <string name="new_words_600">New Words: 600</string>
    <string name="hsk_5">HSK 5</string>
    <string name="new_words_1300">New Words: 1300</string>
    <string name="hsk_6">HSK 6</string>
    <string name="new_words_2500">New Words: 2500</string>
    <string name="contacts">Contacts</string>
    <string name="about">About</string>
    <string name="question">Question</string>
    <string name="option_one">Option One</string>
    <string name="option_two">Option Two</string>
    <string name="option_three">Option Three</string>
    <string name="option_four">Option Four</string>
    <string name="option_a">A)</string>
    <string name="option_b">B)</string>
    <string name="option_c">C)</string>
    <string name="option_d">D)</string>
    <string name="you_have_finished_all_questions">You have finished all questions</string>
    <string name="add_category">Add Category</string>
    <string name="add_question">Add Question</string>
    <string name="answer_one">Answer One</string>
    <string name="answer_two">Answer Two</string>
    <string name="answer_three">Answer Three</string>
    <string name="answer_four">Answer Four</string>
    <string name="is_correct">Is Correct?</string>
    <string name="add_answer">Add Answer</string>
    <string name="select_level">Select Level</string>
    <string name="inflate">Inflate</string>
    <string name="clear_all">Clear All</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="title_fragment">Title Fragment</string>
    <string name="start">Start</string>
    <string name="questions">Questions</string>
    <string name="total">Total</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="next_question">Next Random Question</string>
    <string name="hello">Hello</string>
    <string name="questions_left">Questions Left</string>
    <string name="there_are">There are</string>
</resources>