<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="addQuestionViewModel"
            type="com.pavel2309.hskfivereadingtrainer.ui.AddQuestionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/addQuestionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            app:layout_constraintBottom_toTopOf="@+id/addAnotherQuestionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/enterCategoryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="Head Question"
            android:ems="10"
            android:hint="@string/add_category"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/enterQuestionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="Add question"
            android:ems="10"
            android:hint="@string/add_question"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterCategoryText" />

        <EditText
            android:id="@+id/enterAnswerOneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:autofillHints="Answer one"
            android:ems="10"
            android:hint="@string/answer_one"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/isOneCorrectCheckBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterQuestionText" />

        <EditText
            android:id="@+id/enterAnswerTwoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Answer Two"
            android:ems="10"
            android:hint="@string/answer_two"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/isTwoCorrectCheckBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterAnswerOneText" />

        <EditText
            android:id="@+id/enterAnswerThreeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Answer Three"
            android:ems="10"
            android:hint="@string/answer_three"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/isThreeCorrectCheckBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterAnswerTwoText" />

        <EditText
            android:id="@+id/enterAnswerFourText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Answer Four"
            android:ems="10"
            android:hint="@string/answer_four"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/isFourCorrectCheckBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterAnswerThreeText" />

        <CheckBox
            android:id="@+id/isOneCorrectCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/is_correct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/enterAnswerOneText"
            app:layout_constraintTop_toBottomOf="@+id/enterQuestionText" />

        <CheckBox
            android:id="@+id/isTwoCorrectCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/is_correct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/enterAnswerTwoText"
            app:layout_constraintTop_toBottomOf="@+id/isOneCorrectCheckBox" />

        <CheckBox
            android:id="@+id/isThreeCorrectCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/is_correct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/enterAnswerThreeText"
            app:layout_constraintTop_toBottomOf="@+id/isTwoCorrectCheckBox" />

        <CheckBox
            android:id="@+id/isFourCorrectCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/is_correct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/enterAnswerFourText"
            app:layout_constraintTop_toBottomOf="@+id/isThreeCorrectCheckBox" />

        <Button
            android:id="@+id/addAnotherQuestionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            app:layout_constraintBottom_toTopOf="@+id/addAnswersButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addAnswersButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_answer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints="5"
            android:ems="10"
            android:hint="@string/select_level"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/addQuestionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>